# app/lib/models/dns.py
@@ -7,7 +7,7 @@ class DNSZoneModel(db.Model):
     user_id = db.Column(db.Integer, nullable=True, index=True, default=0)
     domain = db.Column(db.String(255), nullable=True, default='', index=True)
     active = db.Column(db.Boolean, default=True, index=True)
-    exact_match = db.Column(db.Boolean, default=True, index=True)
+    catch_all = db.Column(db.Boolean, default=True, index=True)
     master = db.Column(db.Boolean, default=False, index=True)
     forwarding = db.Column(db.Boolean, default=False, index=True)
 
